--- a/css/styles.css
+++ b/css/styles.css
@@ -25,13 +25,53 @@ display: block;
  display: none;
  }
 
+ .button {
+   border: none;
+   color: white;
+   padding: 16px 32px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+   margin: 4px 2px;
+   transition-duration: 0.4s;
+   cursor: pointer;
+ }
+
+ .button1 {
+  background-color: #990000;
+  color: white;
+  border: 2px solid Black;
+  text-decoration: none;
+}
+
+.button1:hover {
+  background-color: #E6E6E6;
+  text-decoration: none;
+  color: white;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 50px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 
 /* Style rules for header content */
 header {
+padding: 10px 16px;
 text-align: center;
 font-size: 1.5em;
 color: #000000;
 background-color: #E6E6E6;
+font-family: Arial, Helvetica, sans-serif;
 }
 
 header h1 {
@@ -62,8 +102,8 @@ text-decoration: none;
 
 /* Style rules for main content */
 main {
-padding: 2%;
-background-color: #e5e9fc;
+padding: 6%;
+background-color: linear-gradient(to right, #E6E6E6 , white);
 overflow: auto;
 font-family: Verdana, Arial, sans-serif;
 }
@@ -76,54 +116,13 @@ color: #373684;
 font-weight: bold;
 }
 
-#piano, #guitar, #violin {
-
-margin: 0  2%;
-}
-#info {
-clear: left;
-background-color: #c0caf7;
-padding: 1% 2%;
-}
-#info ul{
-  margin-left: 10%;
-}
-.round {
-  border-radius: 8px;
-}
-#contact {
-text-align: center;
-}
-#contact .email-link {
-color: #4645a8;
-text-decoration: none;
-font-weight: bold;
-}
-.tel-link {
-background-color: #373684;
-padding: 2%;
-margin: 0 auto;
-width: 80%;
-text-align: center;
-border-radius: 5px;
-}
-.tel-link a {
-color: #fff;
-text-decoration: none;
-font-size: 1.5em;
-display: block;
-}
-.map {
-border: 5px solid #373684;
-width: 95%;
-height: 50%;
-}
 
 /* Style rules for footer content */
 footer {
 text-align: center;
 font-size: 0.65em;
 clear: left;
+
 }
 footer a {
 color: #4645a8;
@@ -203,25 +202,7 @@ nav li a:hover {
 
 /* Desktop Viewport: Style rules for main content */
 
-#info ul {
-  margin-left 3%;
-}
 
-main h3{
-  font-size: 1.5em;
-}
-
-#piano, #guitar, #violin {
-
-  width: 29%;
-  float: left;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left:2%;
-  margin-right: 2%
-}
-
-/* Media Query for Print */
 
 @media print {
 }
