--- a/css/styles.css
+++ b/css/styles.css
@@ -66,11 +66,11 @@ display: block;
 
 /* Style rules for header content */
 header {
-padding: 10px 16px;
+
 text-align: center;
 font-size: 1.5em;
 color: #000000;
-background-color: #E6E6E6;
+background-color: #cfcfcf;
 font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -102,8 +102,8 @@ text-decoration: none;
 
 /* Style rules for main content */
 main {
-padding: 6%;
-background-color: linear-gradient(to right, #E6E6E6 , white);
+padding: 7%;
+background-color: #cfcfcf;
 overflow: auto;
 font-family: Verdana, Arial, sans-serif;
 }
@@ -122,10 +122,11 @@ footer {
 text-align: center;
 font-size: 0.65em;
 clear: left;
-
+background-color: #999999;
+width: 100%
 }
 footer a {
-color: #4645a8;
+color: black;
 text-decoration: none;
 }
 
@@ -182,9 +183,10 @@ nav li a{
 /* Desktop Viewport: Style rule for header. */
 
 header{
-  padding: 2%;
+  padding: .25%;
 
 }
+
 
 /* Desktop Viewport: Style rules for nav area.  */
 
@@ -196,7 +198,7 @@ nav li a {
 }
 
 nav li a:hover {
-  /* color: #373684; */
+
   background-color: #999999;
 }
 
