--- a/css/styles.css
+++ b/css/styles.css
@@ -156,10 +156,16 @@ font-weight: bold;
 /* Style rules for footer content */
 footer {
 text-align: center;
-font-size: 0.65em;
-clear: left;
+
 background-color: #999999;
-width: 100%
+width: 100%;
+position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+
+   color: white;
+   text-align: center;
 }
 footer a {
 color: black;
