--- a/css/copy.css
+++ b/css/copy.css
@@ -17,6 +17,11 @@ max-width: 100%;
 display: block;
 }
 
+/* Style rule for box sizing applies to all elements */
+ * {
+ box-sizing: border-box;
+}
+
 /* Style rules for mobile viewport*/
 
 /*Hide tab-desk class*/
@@ -25,57 +30,42 @@ display: block;
  display: none;
  }
 
- .button {
-   border: none;
-   color: white;
-   padding: 16px 32px;
+ aside {
    text-align: center;
-   text-decoration: none;
-   display: inline-block;
-   font-size: 16px;
-   margin: 4px 2px;
-   transition-duration: 0.4s;
-   cursor: pointer;
- }
- .button a{
-   text-decoration: none;
-   color: white;
+   font-size: 1.5em;
+   font-weight: bold;
+   color: #373684;
+   text-shadow: 3px 3px 10px #8280cb;
  }
 
- .button1 {
-  background-color: #990000;
-  color: white;
-  border: 2px solid Black;
-  text-decoration: none;
-}
+ figure{
+   position: relative;
+   max-width: 275px;
+   margin: 2% auto;
+   border: 8px solid #373684;
+ }
 
-.button1:hover {
-  background-color: #E6E6E6;
-  text-decoration: none;
-  color: white;
-}
+ figcaption {
+    position: absolute;
+    bottom: 0;
+    background: rgba(55, 54, 132, 0.7);
+    color: #fff;
+    width: 100%;
+     padding: 5% 0;
+    text-align: center;
+    font-family: Verdana, Arial, sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+ }
 
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 50px;
-}
 
-/* Clear floats after image containers */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
+
 
 /* Style rules for header content */
 header {
-
 text-align: center;
 font-size: 1.5em;
-color: #000000;
-background-color: #cfcfcf;
-font-family: Arial, Helvetica, sans-serif;
+color: #373684;
 }
 
 header h1 {
@@ -84,7 +74,7 @@ header h1 {
 
 /* Style rules for navigation area */
 nav {
-background-color: #990000;
+background-color: #373684;
 }
 
 nav ul {
@@ -92,7 +82,7 @@ list-style-type: none;
 text-align: center;
 }
 nav li {
-display: inline-block;
+display: block;
 font-size: 2em;
 border-top: 1px solid #e5e9fc;
 }
@@ -104,47 +94,15 @@ padding: 0.5em 1em;
 text-decoration: none;
 }
 
-
-/* Style rules for table */
-table {
- border: 1px solid #373684;
- border-collapse: collapse;
- margin: 0 auto;
- width: 100%;
- }
- caption {
- font-size: 1.5em;
- font-weight: bold;
- padding: 1%;
- }
- th, td {
- border: 1px solid black;
- padding: 2%;
- }
- th {
- background-color: #990000;
- color: #fff;
- font-size: 1.15em;
-}
-tr:nth-child(odd) {
- background-color: #b35f5f;
-
- }
-
 /* Style rules for main content */
 main {
-
-padding: 7%;
-background-color: #cfcfcf;
+padding: 2%;
+background-color: #e5e9fc;
 overflow: auto;
 font-family: Verdana, Arial, sans-serif;
 }
 main p {
 font-size: 1.25em;
-}
-
-body{
-
 }
 .action {
 font-size: 1.25em;
@@ -152,48 +110,59 @@ color: #373684;
 font-weight: bold;
 }
 
-/* Style rules for form elements */
+#piano, #guitar, #violin {
 
-fieldset, input, textarea{
-  margin-bottom: 2%;}
- fieldset legend{
-   font-weight:bold;
-font-size: 1.25em.}
- label{
-   display:block;
-   padding-top: 2%;
+margin: 0  2%;
 }
- #submit{ margin-top:0;
-   margin-bottom:0;
-   margin-left: auto;
-   margin-right:auto;
-   display: block;
-   padding:2%;
-   background-color: #990000;
-   color: #f6eee4;
-   font-size: 1.25em;
-   border-radius:10px;}
-
+#info {
+clear: left;
+background-color: #c0caf7;
+padding: 1% 2%;
+}
+#info ul{
+  margin-left: 10%;
+}
+.round {
+  border-radius: 8px;
+}
+#contact {
+text-align: center;
+}
+#contact .email-link {
+color: #4645a8;
+text-decoration: none;
+font-weight: bold;
+}
+.tel-link {
+background-color: #373684;
+padding: 2%;
+margin: 0 auto;
+width: 80%;
+text-align: center;
+border-radius: 5px;
+}
+.tel-link a {
+color: #fff;
+text-decoration: none;
+font-size: 1.5em;
+display: block;
+}
+.map {
+border: 5px solid #373684;
+width: 95%;
+height: 50%;
+}
 
 /* Style rules for footer content */
 footer {
 text-align: center;
-
-background-color: #999999;
-width: 100%;
-position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-
-   color: white;
-   text-align: center;
+font-size: 0.65em;
+clear: left;
 }
 footer a {
-color: black;
+color: #4645a8;
 text-decoration: none;
 }
-
 
 /* Media Query for Tablet Viewport */
  @media screen and (min-width: 550px), print {
@@ -210,6 +179,17 @@ text-decoration: none;
  span.tab-desk {
  display: inline;
  }
+
+ .grid {
+   display: grid;
+   grid-template-columns: auto auto;
+   grid-gap: 20px;
+ }
+
+ aside{
+  grid-row: 1 / span 2;
+ }
+
 
  /* Tablet Viewport: Style rules for nav area */
 
@@ -232,8 +212,13 @@ nav li a{
   padding-left: .5em;
 }
 
+/* Tablet Viewport: Style rule for map */
 
+.map {
+  width: 500px;
+  height: 450;
 
+}
 }
 
 /* Media Query for Desktop Viewport. */
@@ -241,13 +226,28 @@ nav li a{
 @media screen and (min-width: 769px), print {
 
 
+
+
+.grid {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 20px;
+}
+
+figcaption {
+  font-size : 1em;
+}
+
+aside {
+  grid-row: 1 / span 4;
+}
+
 /* Desktop Viewport: Style rule for header. */
 
 header{
-  padding: .25%;
+  padding: 2%;
 
 }
-
 
 /* Desktop Viewport: Style rules for nav area.  */
 
@@ -259,13 +259,31 @@ nav li a {
 }
 
 nav li a:hover {
-
-  background-color: #999999;
+  color: #373684;
+  background-color: #e5e9fc;
 }
 
 /* Desktop Viewport: Style rules for main content */
 
+#info ul {
+  margin-left: 3%;
 }
+
+main h3{
+  font-size: 1.5em;
+}
+
+#piano, #guitar, #violin {
+
+  width: 29%;
+  float: left;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left:2%;
+  margin-right: 2%
+}
+}
+/* Media Query for Print */
 
 @media print {
 }
