--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ font-size: 1.25em.}
    display: block;
    padding:2%;
    background-color: #990000;
-   color: black;
+   color: #f6eee4;
    font-size: 1.25em;
    border-radius:10px;}
 
